Fix LLM_API_KEY提示信息
